Use ubuntu as ping plugin is missing in alpine.

--- a/collectd.conf
+++ b/collectd.conf
@@ -6,4 +6,20 @@ Timeout 2
 ReadThreads 5
 WriteThreads 5
 
-Include "/etc/collectd/collectd.d/*.conf"
+LoadPlugin network
+
+<Plugin "network">
+    Server "10.0.0.80" "25826"
+    MaxPacketSize 1452
+</Plugin>
+
+LoadPlugin ping
+
+<Plugin "ping">
+  Host "telstra.com.au"
+  Host "google.com"
+  Host "node-jp.vnet.link"
+  Host "jp-rev1.gfw.io"
+  Interval 1.0
+  Timeout 0.9
+</Plugin>
